# Spartan-pasta

./: Cargo.toml
profiler/: nizk.rs  snark.rs
src/: commitments.rs  compression.rs  dense_mlpoly.rs  group.rs  lib.rs  product_tree.rs  r1csinstance.rs  r1csproof.rs  random.rs  sparse_mlpoly.rs  sumcheck.rs  transcript.rs  unipoly.rs
src/arithmetic/: curves.rs  fields.rs  mod.rs
src/nizk/: bullet.rs  mod.rs
src/scalar/: mod.rs
src/scalar/pasta/: fq.rs  fq_bytes.rs  mod.rs  scalar52.rs
