[package]
name = "spartan"
version = "0.8.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2021"
description = "High-speed zkSNARKs without trusted setup"
documentation = "https://docs.rs/spartan/"
readme = "README.md"
repository = "https://github.com/microsoft/Spartan"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
curve25519-dalek = { version = "4.1.1", features = [
    "serde",
    "alloc",
    "rand_core",
], default-features = false }
merlin = { version = "3.0.0", default-features = false }
rand = "0.8"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
digest = { version = "0.10.7", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0.106", features = ["derive"], default-features = false }
subtle = { version = "2.4", features = ["i128"], default-features = false }
itertools = { version = "0.10.0", default-features = false }
colored = { version = "2.0.0", default-features = false, optional = true }
flate2 = { version = "1.0.14" }
ff = { version = "0.13.0" }
static_assertions = "1.1.0"
hex = { version = "0.4.3", features = ["serde"] }
pasta_curves = { version = "0.5.1" }
group = { version = "0.13", default-features = false }
zeroize = "1.8.1"
multiexp = { version = "0.4.0" }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
pasta-msm = { version = "0.1.4" }


[dev-dependencies]
criterion = "0.3.1"

[lib]
name = "libspartan"
path = "src/lib.rs"

[[bin]]
name = "snark"
path = "profiler/snark.rs"
required-features = ["std"]

[[bin]]
name = "nizk"
path = "profiler/nizk.rs"
required-features = ["std"]

[[bench]]
name = "snark"
harness = false
required-features = ["std"]

[[bench]]
name = "nizk"
harness = false
required-features = ["std"]

[features]
default = ["std", "multicore"]
std = [
    "digest/std",
    "merlin/std",
    "rand/std",
    "sha3/std",
    "byteorder/std",
    "serde/std",
    "subtle/std",
    "itertools/use_std",
    "flate2/rust_backend",
]
multicore = ["rayon"]
profile = ["colored"]
